# flow-test-rig

./: .gitignore  README.md  config_loader.py  daq_writer.py  data.py  default_config.toml  default_daq_config.toml  machine.py  main.py  models.py  pyproject.toml  tui.py
periphs/: __init__.py  alicat.py  scale.py  utils.py
