[project]
name = "st-test-rig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioserial>=1.3.1",
    "dataclass-binder>=0.3.5",
    "loguru>=0.7.3",
    "nicegui>=3.6.1",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
