[project]
name = "flow-test-rig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioserial>=1.3.1",
    "dataclass-binder>=0.3.5",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "nicegui>=3.6.1",
    "textual>=7.5.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
